# beautifulsoup-tutorial

./: .env  .env.example  .flake8  .gcloudignore  .gitignore  LICENSE  Makefile  Pipfile  README.md  config.py  extract.py  fallback.py  fetch.py  local.py  main.py  meta.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
beautifulsoup_tutorial/: __init__.py  fetch.py  scrape.py
endpoint/: __init__.py  extract.py  fallback.py  main.py  meta.py
scrape/: __init__.py  color.py  description.py  domain.py  exceptions.py  favicon.py  fetch.py  image.py  name.py  title.py
scraper/: __init__.py  scrape.py
tests/: pytest.ini  test_previews.py  test_request.py
