[tool.poetry]
name = "BeautifulSoup Web Scraping Tutorial"
version = "0.1.0"
description = "Scrape webpage metadata using BeautifulSoup."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hackersandslackers/beautifulsoup-tutorial/"
repository = "https://github.com/hackersandslackers/beautifulsoup-tutorial/"
documentation = "https://hackersandslackers.com/scraping-urls-with-beautifulsoup/"
keywords = ["Python",
            "Beautifulsoup",
            "Scrape",
            "Scraper",
            "Scraping"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
beautifulsoup4 = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
mock = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run = "main:scrape"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/beautifulsoup-tutorial/issues"